syntax = "proto3";

package profile;

option go_package = "github.com/vibast-solutions/ms-go-profile/app/types;types";

service ProfileService {
  rpc CreateProfile(CreateProfileRequest) returns (ProfileResponse);
  rpc GetProfile(GetProfileRequest) returns (ProfileResponse);
  rpc GetProfileByUserID(GetProfileByUserIDRequest) returns (ProfileResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (ProfileResponse);
  rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse);

  rpc CreateContact(CreateContactRequest) returns (ContactResponse);
  rpc GetContact(GetContactRequest) returns (ContactResponse);
  rpc UpdateContact(UpdateContactRequest) returns (ContactResponse);
  rpc DeleteContact(DeleteContactRequest) returns (DeleteContactResponse);
  rpc ListContacts(ListContactsRequest) returns (ListContactsResponse);
}

message CreateProfileRequest {
  uint64 user_id = 1;
  string email = 2;
}

message GetProfileRequest {
  uint64 id = 1;
}

message GetProfileByUserIDRequest {
  uint64 user_id = 1;
}

message UpdateProfileRequest {
  uint64 id = 1;
  string email = 2;
}

message DeleteProfileRequest {
  uint64 id = 1;
}

message ProfileResponse {
  uint64 id = 1;
  uint64 user_id = 2;
  string email = 3;
  string created_at = 4;
  string updated_at = 5;
}

message DeleteProfileResponse {
  string message = 1;
}

message CreateContactRequest {
  string first_name = 1;
  string last_name = 2;
  string nin = 3;
  string dob = 4;
  string phone = 5;
  uint64 profile_id = 6;
  string type = 7;
}

message GetContactRequest {
  uint64 id = 1;
}

message UpdateContactRequest {
  uint64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string nin = 4;
  string dob = 5;
  string phone = 6;
  uint64 profile_id = 7;
  string type = 8;
}

message DeleteContactRequest {
  uint64 id = 1;
}

message ListContactsRequest {
  uint64 profile_id = 1;
  uint32 page = 2;
  uint32 page_size = 3;
}

message ContactResponse {
  uint64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string nin = 4;
  string dob = 5;
  string phone = 6;
  string created_at = 7;
  string updated_at = 8;
  uint64 profile_id = 9;
  string type = 10;
}

message DeleteContactResponse {
  string message = 1;
}

message ListContactsResponse {
  repeated ContactResponse contacts = 1;
  uint32 page = 2;
  uint32 page_size = 3;
  uint64 total = 4;
}
